fix profile gap and logo animation position when scrolled down

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -10,6 +10,8 @@
     text-rendering: optimizeLegibility;
     overflow-wrap: break-word;
     font-size: clamp(14px, calc(14.00px + 0.00vw), 14px);
+
+    @apply bg-neutral-900;
   }
 
   p, a, span {
